# eufs

./: README.md  flake.nix  pyproject.toml
eufs/: euph.py  main.py
